[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/UI/Panel.png" type="Texture" id=1]
[ext_resource path="res://Sprites/UI/HealthBar.png" type="Texture" id=2]
[ext_resource path="res://Sprites/UI/HealthHolder.png" type="Texture" id=3]
[ext_resource path="res://UI/health_progress.gd" type="Script" id=4]
[ext_resource path="res://UI/gui.gd" type="Script" id=5]
[ext_resource path="res://UI/Theme.tres" type="Theme" id=6]
[ext_resource path="res://Audio/die.wav" type="AudioStream" id=7]

[sub_resource type="Animation" id=1]
tracks/0/type = "value"
tracks/0/path = NodePath("Control/Paused:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.101961, 0.0745098, 0.145098, 0 ), Color( 0.101961, 0.0745098, 0.145098, 0.85098 ) ]
}

[node name="GUI" type="CanvasLayer"]
pause_mode = 2
layer = 5
script = ExtResource( 5 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Paused" type="ColorRect" parent="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.101961, 0.0745098, 0.145098, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RetryButton" type="Button" parent="Control/Paused"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -92.0
margin_top = -80.0
margin_right = 92.0
margin_bottom = -8.0
text = "Retry"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="Control/Paused"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -92.0
margin_top = 8.0
margin_right = 92.0
margin_bottom = 80.0
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseTHeTab" type="Label" parent="Control/Paused"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -136.0
margin_top = 40.0
margin_right = 146.0
margin_bottom = 59.0
text = "Please CLose the Tab"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="Control"]
pause_mode = 1
margin_top = 24.0
margin_right = 160.0
margin_bottom = 72.0
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="Control/NinePatchRect/HBoxContainer"]
margin_right = 20.0
margin_bottom = 48.0
texture = ExtResource( 1 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="HealthProgress" type="TextureProgress" parent="Control/NinePatchRect/HBoxContainer" groups=[
"PlayerVisible",
]]
margin_left = 20.0
margin_right = 160.0
margin_bottom = 48.0
size_flags_horizontal = 3
step = 1.2
value = 99.6
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 2 )
nine_patch_stretch = true
script = ExtResource( 4 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Control"]

[node name="AudioStreamPlayerDead" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Dead = SubResource( 1 )

[connection signal="pressed" from="Control/Paused/RetryButton" to="." method="_on_RetryButton_pressed"]
[connection signal="pressed" from="Control/Paused/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="PlayerDied" from="Control/NinePatchRect/HBoxContainer/HealthProgress" to="." method="_on_HealthProgress_PlayerDied"]
[connection signal="value_changed" from="Control/NinePatchRect/HBoxContainer/HealthProgress" to="Control/NinePatchRect/HBoxContainer/HealthProgress" method="_on_HealthProgress_value_changed"]
